<resources>
    <string-array name="main_tables">
        <item>首页</item>
        <item>地图</item>
        <item>结算</item>
        <item>我的</item>
    </string-array>

    <string-array name="arrays">
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
    </string-array>

    <string name="app_name">酒快送</string>
    <string name="splash_text">进入\n体验</string>
    <string name="signln">登录DouId即可进入精品视频，立即登录？</string>
    <string name="right">得豆精品课程 版本1.0*****</string>
    <string name="vide_text">选择您需要观看的精品视频</string>
    <string name="class_one">小学</string>
    <string name="class_two">初中</string>
    <string name="class_three">高中</string>
    <string name="class_name">年级</string>
    <string name="class_info">(23)</string>
    <string name="hint_input">请输入你要查找的课程</string>
    <string name="hot_search">热门搜索</string>
    <string name="recommend_video">推荐视频</string>
    <string name="yuwen">语文</string>
    <string name="shuxue">数学</string>
    <string name="yingyu">英语</string>
    <string name="wuli">物理</string>
    <string name="huaxue">化学</string>
    <string name="shengwu">生物</string>
    <string name="dili">地理</string>
    <string name="lishi">历史</string>
    <string name="zhengzhi">政治</string>
    <string name="no_result">什么都没找到哦，重新搜索资源吧~</string>
    <string name="catalog">目录</string>
    <string name="less_one_minute">观看不足一分钟</string>
    <string name="my_collection">我的收藏</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>
    <string name="back">返回</string>
    <string name="problem_feedback">意见反馈</string>
    <string name="edit">编辑</string>
    <string name="selectall">全选</string>
    <string name="quitcollection">取消收藏</string>
    <string name="appname">智能货柜V4.2.3.423</string>
    <string name="appversion">1.0.0</string>
    <string name="companyname">******有限公司</string>
    <string name="write_comment">请详细描述您遇到的问题，若功能异常，上传页面截图更快解决哦。（长度在300字以内）</string>
    <string name="loading_err">哎呀，网络不给力！点击重试。</string>
    <string name="updata_null">内容不存在呦</string>
    <string name="loading">奋力加载中...</string>
    <string name="cachetext">是否清除缓存内容（图片等）？</string>
    <string name="submit">确定</string>
    <string name="submit_in">点击进入</string>
    <string name="cancle">取消</string>
    <string name="watch_finish">已看完</string>
    <string name="watch_nooneminute">观看不足一分钟</string>
    <string name="collection_success">收藏成功</string>
    <string name="collection_quit">收藏失败</string>
    <string name="quitcollection_success">取消收藏成功</string>
    <string name="quitcollection_quit">取消收藏失败</string>
    <string name="login">登&#32;&#32;&#32;&#32;录</string>


    <!--cc-->
    <string name="action_settings">Settings</string>
    <string name="download">离线下载</string>
    <string name="play">播放</string>
    <string name="upload_video_info">视频信息</string>
    <string name="download_list">离线列表</string>
    <string name="screensize">画面尺寸</string>
    <string name="definition">清晰度</string>
    <string name="subtitle">字幕</string>
    <string name="speed">倍速</string>
    <string name="account_info">账户信息</string>
    <string name="hello_world">Hello world!</string>
    <string name="close_ad">关闭广告</string>
    <string name="ad_info">了解详情</string>
    <string name="shouye">首页</string>
    <string name="ditu">地图</string>
    <string name="jiesuan">结算</string>
    <string name="wode">我的</string>
    <string name="tip_search">搜索宝贝</string>
    <string name="search_btn_text">搜索</string>
    <!-- 分页组件-->
    <string name="pulltorefresh_nonet">暂无网络，请检查网络设置</string>

    <string-array name="personal_center_v">
        <item>收货地址</item>
        <item>邀请好友</item>
        <item>邀请码</item>
        <item>我的推荐</item>
        <item>我的评价</item>
        <item>反馈</item>
        <item>关于我们</item>
    </string-array>
    <string name="hint_login_phone">请输入手机号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="hint_login_tuijian">推荐人手机号</string>
    <string name="hint_new_pwd">请输入新密码</string>
    <string name="hint_old_pwd">请输入旧密码</string>
    <string name="hint_new_pwd2">再次输入新密码</string>
    <string name="hint_new_pwd3">确认新密码</string>
    <string name="hint_yanzheng">验证码</string>
    <string name="retrieve_pwd">忘记密码?</string>
    <string name="register">注册账号</string>
    <string name="resend_identify">获取验证码</string>
    <string name="nowregister">立即注册</string>
    <string name="text_msg">发送的内容不可以超过2000个字！</string>
    <string name="login_msg">请先登录后再进行此操作</string>
    <string name="phone">手机号</string>
    <string name="head">头像</string>
    <string name="take_picture">拍照</string>
    <string name="from_album">从相册上传</string>
    <string name="cancel">取消</string>


    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>


</resources>
