<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <Button
        android:id="@+id/txt_take_picture"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/actionsheet_single_selector"
        android:gravity="center"
        android:onClick="getCoverByCamera"
        android:text="@string/take_picture"
        android:textColor="@color/actionsheet_blue"
        android:textSize="18sp"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/txt_from_album"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/actionsheet_single_selector"
        android:gravity="center"
        android:onClick="getCoverFromAlbum"
        android:text="@string/from_album"
        android:textColor="@color/actionsheet_blue"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/txt_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/actionsheet_single_selector"
        android:gravity="center"
        android:text="@string/cancel"
        android:onClick="cancelLoginOut"
        android:textColor="@color/actionsheet_blue"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>