<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/loading_err"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="73dp">
            <ImageView
                android:layout_width="221.5dp"
                android:layout_height="182dp"
                android:layout_marginLeft="60dp"
                android:src="@drawable/con_err"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_err"
                android:layout_gravity="center"
                android:layout_marginTop="56dp"
                android:textColor="#b2b2b2"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/loading_retry"
                android:layout_width="197dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/button_backbg"
                android:layout_marginTop="97dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="重试"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="83.5dp">
            <ImageView
                android:layout_width="206.5dp"
                android:layout_height="193dp"
                android:layout_marginLeft="74dp"
                android:src="@drawable/con_loading"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="105dp"
                android:textColor="#a5a5a5"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/data_null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="112dp">
            <ImageView
                android:layout_width="132dp"
                android:layout_height="98dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/con_null"/>
            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updata_null"
                android:layout_gravity="center"
                android:layout_marginTop="62.5dp"
                android:textColor="@color/no_result"
                android:textSize="14sp"
                android:typeface="normal"/>
            <Button
                android:id="@+id/btn_nullback"
                android:layout_width="197dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/button_backbg"
                android:layout_marginTop="154dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/back"/>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>