<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/title"/>

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="23dp">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@mipmap/shouji"/>

        <EditText
            android:id="@+id/edt_pay_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toLeftOf="@+id/del_phone"
            android:layout_toRightOf="@+id/img_user"
            android:background="@null"
            android:hint="@string/hint_login_phone"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            />

        <ImageView
            android:id="@+id/del_phone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:onClick="delPhone"
            android:scaleType="centerInside"
            android:src="@mipmap/icon_del_txt"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@+id/edt_pay_phone"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/divider_color"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_user"
        android:layout_marginTop="23dp">

        <ImageView
            android:id="@+id/img_yanzheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@mipmap/icon_yanzhengma"/>

        <EditText
            android:id="@+id/edt_pay_yz"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/img_yanzheng"
            android:autoText="false"
            android:background="@null"
            android:inputType="number"
            android:hint="请输入验证码"
            android:maxLength="20"
            />
        <TextView
            android:id="@+id/tip_number"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:gravity="center"
            android:textColor="#e04a46"
            android:onClick="sendIdentify"
            android:text="@string/resend_identify"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp" />


        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@+id/edt_pay_yz"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/divider_color"
            android:singleLine="true"/>


    </RelativeLayout>





    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/relativeLayout1"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/img_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@mipmap/mima"/>

        <EditText
            android:id="@+id/edt_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toLeftOf="@+id/del_pwd"
            android:layout_toRightOf="@+id/img_pwd"
            android:autoText="false"
            android:background="@null"
            android:hint="@string/hint_new_pwd"
            android:inputType="textPassword"
            android:maxLength="20"
            />

        <ImageView
            android:id="@+id/del_pwd"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:onClick="delPwd"
            android:scaleType="centerInside"
            android:src="@mipmap/icon_del_txt"
            android:visibility="gone"
            />


        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@+id/edt_new_pwd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/divider_color"
            android:singleLine="true"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/img_pwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:src="@mipmap/mima"/>

        <EditText
            android:id="@+id/edt_new_pwd2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_toLeftOf="@+id/del_pwd2"
            android:layout_toRightOf="@+id/img_pwd2"
            android:autoText="false"
            android:background="@null"
            android:hint="@string/hint_new_pwd2"
            android:inputType="textPassword"
            android:maxLength="20"
            />

        <ImageView
            android:id="@+id/del_pwd2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:onClick="delPwd"
            android:scaleType="centerInside"
            android:src="@mipmap/icon_del_txt"
            android:visibility="gone"
            />


        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@+id/edt_new_pwd2"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/divider_color"
            android:singleLine="true"/>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_enable_selector"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true" />






</RelativeLayout>